se volvio funcion

--- a/tres numeros.html
+++ b/tres numeros.html
@@ -7,6 +7,8 @@ var numero2 = prompt();
 console.log("introduce el tercer numero");
 var numero3 = prompt();
 
+function tres(){
+
 if ((numero1 > numero2) && (numero1 > numero3))
 {
   console.log("el numero mayor es " + numero1);
@@ -23,3 +25,5 @@ else
 {
   console.log("el numero mayor es " +numero3);
 }
+}
+tres();
